calculator/src/test/resources/application.properties
server.port=8080

spring.datasource.url=jdbc:h2:mem:testdb
spring.datasource.driverClassName=org.h2.Driver
spring.datasource.username=user
spring.datasource.password=password
spring.jpa.database-platform=org.hibernate.dialect.H2Dialect


calculator.service.max_tries_per_minute=3

percentage.service.max_attempts=3
percentage.service.retry_time=1000
percentage.service.url=http://error

percentage.job.refresh_interval=200000
percentage.job.enabled=false
